...
      screenOptions={({ route }) => ({
        tabBarIcon: ({ focused, color, size }) => {
          let iconName: string;

          if (route.name === 'Scan') {
            iconName = focused ? 'bluetooth' : 'bluetooth';
          } else if (route.name === 'Telemetry') {
            iconName = focused ? 'speedometer' : 'speedometer';
          } else if (route.name === 'Settings') {
            iconName = focused ? 'cog' : 'cog';
          } else {
            iconName = 'help';
          }

          return (
...
