...
  );

  return (
    <SettingsSection title={messages.settings.displayConfiguration}>
      <SettingsNumberInput
          label={messages.settings.carNumber}
          placeholder="123"
          value={carNumber}
          onChangeText={updateCarNumber}
          hint={messages.settings.carNumberHint}
      />

      <SettingsSwitch
...
