...
export const telemetryCases: Record<string, CarTelemetry> = {
    normal: {
        position: 10,
        bestLapTime: 128831,
        lastLapTime: 134914,
        deltaToLeader: {carNumber: "102", ms: 78217, laps: 0},
        gapAhead: {carNumber: "160", ms: 8145, laps: 0},
        gapBehind: {carNumber: "121", ms: 10094, laps: 0},
    },

    minValues: {
        position: 1,
        bestLapTime: 0,
...
    },

    maxValues: {
        position: 99,
        bestLapTime: 999999,
        lastLapTime: 999999,
        deltaToLeader: {carNumber: "999", ms: 999999, laps: 99},
        gapAhead: {carNumber: "999", ms: 999999, laps: 99},
        gapBehind: {carNumber: "999", ms: 999999, laps: 99},
    },

    oneDigitCars: {
        position: 1,
...
