appId: be.malloryBouchard.RacePanelX
---
- launchApp:
    clearState: true
- assertVisible: "Settings"
- tapOn: "123"
- eraseText
- inputText: "44"
- assertVisible: "44"
- tapOn: "Settings"
- tapOn: "Telemetry"
- tapOn: "Settings"
- assertVisible: "44"
