appId: be.malloryBouchard.RacePanelX
---
- launchApp:
    clearState: true
- assertVisible: "Settings"
- tapOn: "123"
- eraseText
- inputText: "999"
- assertVisible: "999"
