appId: be.malloryBouchard.RacePanelX
---
- launchApp:
    clearState: true
- assertVisible: "Settings"
- scroll
- assertNotVisible: "Additional display"
- tapOn: "Large text"
- assertVisible: "Additional display"
- assertVisible: "Position"
- tapOn: "Large text"
- assertNotVisible: "Additional display"
