appId: be.malloryBouchard.RacePanelX
---
- launchApp:
      clearState: true
- waitForAnimationToEnd
- openLink:
      link: "racepanelx://e2e?bleMock=true"
- assertVisible: "Settings"
- tapOn: "Telemetry"
- assertVisible: "No device connected"
- tapOn: "Connect a device"
- assertVisible: "Connect a device"
- assertVisible: ".*Scan"
- tapOn: ".*Scan"
- assertVisible: ".*Race Panel X Device.*"
- tapOn: ".*Race Panel X Device.*"
- assertVisible: "Settings"
- tapOn: "Telemetry"
- assertVisible: "Race Panel X"
- assertVisible: "Car number missing"
- assertVisible: "Configure"
- tapOn: "Configure"
- tapOn: "123"
- eraseText
- inputText: "160"
- assertVisible: "160"
- tapOn: "Settings"
- tapOn: "Telemetry"
- assertVisible: ".*Number.*"
- assertVisible: ".*Position.*"
- assertVisible: ".*Best lap.*"
- assertVisible: ".*Last lap.*"
- assertVisible: ".*Delta.*pole.*"
- assertVisible: ".*Gap.*ahead.*"
- assertVisible: ".*Gap.*behind.*"