appId: be.malloryBouchard.RacePanelX
---
- launchApp:
        clearState: true
- waitForAnimationToEnd
- openLink:
        link: "racepanelx://e2e?bleMock=true"
- assertVisible: "Settings"
- tapOn: ".*Connect a device"
- assertVisible: ".*Scan"
- tapOn: ".*Scan"
- assertVisible: ".*Race Panel X Device.*"
- tapOn: ".*Race Panel X Device.*"
- assertVisible: "Settings"
- tapOn: "123"
- eraseText
- inputText: "160"
- assertVisible: "160"
- tapOn: "Settings"
- tapOn: "Telemetry"
- assertVisible: ".*Last.*lap.*"
- tapOn: ".*Last.*lap.*"
- tapOn: "Settings"
- assertVisible: ".*Last.*lap.*"
- tapOn: "Telemetry"
- assertVisible: ".*Best.*lap.*"
- tapOn: ".*Best.*lap.*"
- tapOn: "Settings"
- assertVisible: ".*Last.*lap.*"
