appId: be.malloryBouchard.RacePanelX
---
- launchApp:
        clearState: true
- waitForAnimationToEnd
- openLink:
        link: "racepanelx://e2e?bleMock=true"
- assertVisible: "Settings"
- tapOn: ".*Connect a device"
- assertVisible: ".*Scan"
- tapOn: ".*Scan"
- assertVisible: ".*Race Panel X Device.*"
- tapOn: ".*Race Panel X Device.*"
- assertVisible: "Settings"
- tapOn: "123"
- eraseText
- inputText: "160"
- assertVisible: "160"
- tapOn: "Settings"
- assertVisible: "Settings"
- tapOn: "Large text"
- scroll
- assertVisible: "Additional display"
- tapOn: "Telemetry"
- assertVisible: ".*Position.*"
- tapOn: ".*Position.*"
- tapOn: "Settings"
- scroll
- assertVisible: ".*Position.*"