appId: be.malloryBouchard.RacePanelX
---
- launchApp:
    clearState: true
- assertVisible: "Settings"
- tapOn: "Telemetry"
- assertVisible: "Race Panel X"
- tapOn:
    point: "90%,7%"
- assertVisible: "Race Panel X"
